<resources>
    <string name="app_name">Licenta</string>
    <string name="User_FirstName">First Name</string>
    <string name="User_LastName">Last Name</string>
    <string name="User_Username">Username</string>
    <string name="User_Password">Password</string>
    <string name="User_BirthDate">BirthDate</string>
    <string name="User_Height">Height</string>
    <string name="User_Weight">Weight</string>
    <string name="User_Email">Email</string>
    <string name="Height_Message">How tall are you?</string>
    <string name="Weight_Message">How much do you weight?</string>
    <string name="Sex_Info">Please select which sex we should use to calculate your calorie needs:</string>
    <string name="Age_Info">How old are you?</string>
    <string name="Country_Info">Where do you live?</string>
    <string name="Next_Button">Next</string>
    <string name="Sex_Female">Female</string>
    <string name="Sex_Male">Male</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_create_account">New Here? Create Account</string>
    <string name="login_button">Log in</string>
    <string name="already_registered_button">Already Registered? Login Here</string>
    <string name="activity_level">Activity level</string>
    <string-array name="array_activity_levels">
        <item>No exercise</item>
        <item>Light exercise (1-3 days per week)</item>
        <item>Moderate exercise (3-5 days per week)</item>
        <item>Heavy exercise (6-7 days per week)</item>
        <item>Very heavy exercise (twice per day, extra heavy workouts)</item>
    </string-array>

    <string name="target_weight"> Target weight </string>
    <string name="Weekly_GoalTV">Weekly goal</string>

    <string-array name="Weekly_goal_array">
        <item> I want to loose</item>
        <item> I want to gain</item>
    </string-array>

    <string-array name="Weekly_kg_array">
        <item>0.2</item>
        <item>0.5</item>
        <item>0.75</item>
        <item>1</item>
        <item>1.25</item>
        <item>1.5</item>
    </string-array>
    <string-array name="Months_Spinner">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>Octomber</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_nutrients">NutrientsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
