<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/User_FirstNameEditText"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/User_FirstName"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/User_UsernameEditText"
        app:layout_constraintEnd_toStartOf="@+id/User_LastNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/User_UsernameEditText"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/User_Username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/User_PasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/User_LastNameEditText"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/User_LastName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/User_UsernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/User_FirstNameEditText"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/User_PasswordEditText"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/User_Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/User_EmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/User_EmailEditText"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="147dp"
        android:ems="10"
        android:hint="@string/User_Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/User_SignIn_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/User_SignIn_Button"
        android:layout_width="407dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="#00E5FF"
        android:text="REGISTER"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>