<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".SignUp_Continue_Activity">

    <TextView
        android:id="@+id/AgeTV"
        android:layout_width="322dp"
        android:layout_height="30dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/Age_Info"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgSex"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/User_Female_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/Sex_Female"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/User_Male_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/Sex_Male"
            android:textColor="@drawable/text_color" />


    </RadioGroup>

    <TextView
        android:id="@+id/SexTV"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/Sex_Info"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/User_Age_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="135dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeTV"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/CountryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="223dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_Age_EditText" />

    <Spinner
        android:id="@+id/User_Country_Spinner"
        android:layout_width="220dp"
        android:layout_height="31dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="162dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="18dp"
        android:text="@string/Country_Info"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/User_Country_Spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/OkButton"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00E5FF"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>